bump to java 21, paper 1.20.6